forms padding and spacing fixed

--- a/src/components/Forms/StudentDetailForms/FormOne/FormOne.module.scss
+++ b/src/components/Forms/StudentDetailForms/FormOne/FormOne.module.scss
@@ -1,5 +1,6 @@
 .container {
   width: 100%;
+  padding: 1.5rem 0;
 
   .btn {
     width: 100%;
